@@ -90,7 +90,7 @@ a.about_data.quality	{border-left:1px solid #000; text-align:right; padding-righ
 
 /*	Country Code List style - INDEX PAGE
 	============================================= */
-.country_menu_wrap			{width:960px; margin:0 auto; padding:100px 0 60px 0;}
+.country_menu_wrap			{width:960px; margin:0 auto; padding:60px 0;}
 .country_menu_list_wrap		{margin:0 auto; width:960px;}
 .publisher_menu_list_wrap	{margin:0 auto; width:860px;}
 .menu_list_wrap				{display:inline-block; vertical-align:top; padding-left:50px; width:500px; height:700px; overflow-x:hidden; overflow-y:scroll; box-sizing:border-box;}
@@ -302,7 +302,7 @@ a.csv_download:hover		{background-color:#000; color:#FFF;}
 /*	For url #view=search
 	============================================= */
 input.typeahead				{border-bottom:1px solid #000 !important;}
-input#view_search_string, input.typeahead.tt-hint		{color:#000;}
+input#view_search_string, input#view_search_string_only, input.typeahead.tt-hint		{color:#000;}
 .search_filter				{width:960px; margin:0 auto; padding:25px 23px 14px 23px; box-sizing:border-box; border:1px solid #000; border-radius:6px;}
 .search_label				{color:#000;}
 #search_div					{color:#000;}
