@@ -92,7 +92,7 @@ a.about_data.quality	{border-left:1px solid #CCC; text-align:right; padding-righ
 
 /*	Country Code List style - INDEX PAGE
 	============================================= */
-.country_menu_wrap			{width:960px; margin:0 auto; padding:100px 0 60px 0;}
+.country_menu_wrap			{width:960px; margin:0 auto; padding:60px 0;}
 .country_menu_list_wrap		{margin:0 auto; width:960px;}
 .publisher_menu_list_wrap	{margin:0 auto; width:860px;}
 .menu_list_wrap				{display:inline-block; vertical-align:top; padding-left:50px; width:500px; height:700px; overflow-x:hidden; overflow-y:scroll; box-sizing:border-box;}
@@ -310,7 +310,7 @@ a.csv_download:hover		{background-color:rgba(115,182,255,0.49); color:#FFF;}
 
 /*	For url #view=search
 	============================================= */
-input#view_search_string, input.typeahead.tt-hint		{color:#FFF;}
+input#view_search_string, input#view_search_string_only, input.typeahead.tt-hint		{color:#FFF;}
 .search_filter				{width:960px; margin:0 auto; padding:25px 23px 14px 23px; box-sizing:border-box; background-color:rgba(11,37,60,0.5); border-radius:6px;}
 .search_label				{color:#FFF;}
 #search_div					{color:#FFF;}
