@@ -14,8 +14,9 @@
 #result_span			{font-size:3em;}
 #filter_span			{font-size:3em; display:none;}
 
-#view_search_test		{margin:0 auto; width:960px; padding:30px 0 0 0;}
-input#view_search_string, input.typeahead.tt-hint		{font-size:32px; width:936px; height:48px; border:0; margin-top:10px;}
+#view_search_test		{margin:0 auto; width:960px; padding:30px 0 40px 0;}
+input#view_search_string, input#view_search_string_only, input.typeahead.tt-hint	{font-size:32px; width:936px; height:48px; border:0; margin-top:10px;}
+input#view_search_string_only	{width:690px;}
 .search_wrap			{display:inline-block; width:290px; margin-bottom:15px;}
 .search_wrap:nth-child(3), .search_wrap:nth-child(6)	{margin-left:20px; margin-right:20px;}
 .search_label			{font-size:14px; padding-bottom:5px; margin-right:23px; line-height:1.2em; text-transform:uppercase;}
