@@ -945,6 +945,9 @@ DISCOVER
 #search_placeholder_txt
 类型（eg. earthquake）或添加过滤器来缩小搜索范围
 
+#search2_placeholder_txt
+类型（eg. earthquake）
+
 #search_publisher_dropmenu_text trim=ends
 选择发布 
 
