@@ -945,6 +945,9 @@ Search
 #search_placeholder_txt
 Type (eg. earthquake) or select filters to narrow your search
 
+#search2_placeholder_txt
+Type (eg. earthquake)
+
 #search_publisher_dropmenu_text trim=ends
 Search for a Publisher
 
