@@ -947,6 +947,9 @@ Chercher
 #search_placeholder_txt
 Type (ex. earthquake) ou ajouter des filtres
 
+#search2_placeholder_txt
+Type (ex. earthquake)
+
 #search_publisher_dropmenu_text trim=ends
 Rechercher un Editeur
 
