@@ -944,6 +944,9 @@ DISCOVER
 #search_placeholder_txt
 प्रकार (eg. earthquake) या फिल्टर जोड़ें
 
+#search2_placeholder_txt
+प्रकार (eg. earthquake)
+
 #search_publisher_dropmenu_text trim=ends
 एक प्रकाशक का चयन करें 
 
