@@ -947,6 +947,9 @@ DISCOVER
 #search_placeholder_txt
 タイプ（eg. earthquake）またはフィルターを追加する
 
+#search2_placeholder_txt
+タイプ（eg. earthquake）
+
 #search_publisher_dropmenu_text trim=ends
 出版社を選択 
 
