@@ -944,6 +944,9 @@ Buscar
 #search_placeholder_txt
 Tipo (por ejemplo, earthquake) o agregar filtros
 
+#search2_placeholder_txt
+Tipo (por ejemplo, earthquake)
+
 #search_publisher_dropmenu_text trim=ends
 Búsqueda de un editor 
 
