@@ -1,3 +1,11 @@
+Development Portal (2016-11-30 shi)
+==============================
+New search2 view text only added
+Removed filters and country portals
+Removed compare buttons
+Updated css fixes
+
+
 Development Portal (2016-11-29 shi)
 ==============================
 Added search icon for DISCOVER
